# STA663-final-biclustering

./: Final_report.ipynb  LICENSE  README.md  setup.cfg  setup.py
Applications on Data/: bracancer.py  lungcancer.py  simulation.py
SSVD/: ClusterPlot.py  SSVD.py  SSVD_numba.py
src/: init.py
test/: test.py
two real world data sets/: bracsample.txt
