[metadata]
# replace with your username:
name = SSVD_cxgq2
version = 2.0
author = Chengxin Yang, Guanqi Zeng
author_email = chengxin.yang@duke.edu, guanqi.zeng@duke.edu
description = A python package of Biclustering for Sparse matrix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cheungsin/STA663-final-biclustering
project_urls =
    Bug Tracker = https://github.com/Cheungsin/STA663-final-biclustering
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src